--- a/client/app/index.html
+++ b/client/app/index.html
@@ -4,10 +4,10 @@
         <script src="app/bower_components/dustjs-linkedin/dist/dust-full.js" type="application/javascript"></script>
         <script src="app/bower_components/dustjs-linkedin-helpers/dist/dust-helpers.js" type="application/javascript"></script>
         <script src="app/bower_components/jquery/dist/jquery.js" type="application/javascript"></script>
-        <script src="app/data-renderer.js" type="application/javascript"></script>
-        <script src="app/product-service.js" type="application/javascript"></script>
-        <script src="app/sku-page.js" type="application/javascript"></script>
-        <script src="app/product-list-widget.js" type="application/javascript"></script>
+        <script src="app/js/data-renderer.js" type="application/javascript"></script>
+        <script src="app/js/product-service.js" type="application/javascript"></script>
+        <script src="app/js/sku-page.js" type="application/javascript"></script>
+        <script src="app/js/product-list-widget.js" type="application/javascript"></script>
     </head>
     <body>
         <div>
